# rust-web-starter

./: Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml
assets/css/: style.css
src/: lib.rs  main.rs
src/home/: dto.rs  home_render.rs  mod.rs
src/shared/: mod.rs
src/shared/config/: config.rs  settings.rs
src/shared/dto/: response.rs
src/users/: dto.rs  mod.rs  users_controller.rs  users_model.rs  users_repository.rs  users_service.rs
templates/: home.hbs  index.hbs
test/http/: users.http
