[package]
name = "rust-web-starter"
version = "0.1.0"
edition = "2024"
authors = ["Alberto Ielpo <alberto.ielpo@gmail.com>"]

[dependencies]
actix-web = "4"
# Actix-files for serving static assets (CSS, JS, images, etc.)
actix-files = "0.6"
# Handlebars template engine for rendering .hbs files with dynamic data
handlebars = {version = "6.3.2", features = ["dir_source"]}
serde = "1.0.228"
serde_json = "1.0.145"
time = "0.3.44"
env_logger = "0.11.8"
mongodb = "3.4.1"
actix-web-lab = "0.24.3"
log = "0.4.29"
